vb-dask.yml
kind: Service
apiVersion: v1
metadata:
  name: dask-scheduler
spec:
  selector:
    app: dask-scheduler
  ports:
  - name: dask-scheduler
    port: 8786
    targetPort: 8786
  - name: dask-ui
    port: 8787
    targetPort: 8787

#---

#apiVersion: v1
#kind: PersistentVolume
#metadata:
#  name: vb-dask-pvolume
#spec:
#  accessModes:
#  - ReadWriteMany
#  capacity:
#    storage: 1Gi
#  hostPath:
#    path: "/Users/dsmith/Documents/git/vb_kube/vb_django"
#  persistentVolumeReclaimPolicy: Recycle
#  storageClassName: standard
#  volumeMode: Filesystem
#
#---
#
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: vb-dask-pvolume-claim1
#spec:
#  accessModes:
#    - ReadWriteMany
#  volumeMode: Filesystem
#  resources:
#    requests:
#      storage: 8Gi
#  storageClassName: standard
#  selector:
#    matchLabels:
#      release: "stable"
#      name: vb-dask-pvolume

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dask-scheduler
  name: dask-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dask-scheduler
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dask-scheduler
    spec:
      containers:
      - args:
        - dask-scheduler
        image: quanted/vb_dask:latest
        name: dask-scheduler
        ports:
        - containerPort: 8786
        - containerPort: 8787
      hostname: dask-scheduler
      restartPolicy: Always

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dask-worker
  name: dask-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dask-worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dask-worker
    spec:
      hostname: dask-worker
      restartPolicy: Always
      containers:
      - name: dask-worker
        command:
        - dask-worker
        - dask-scheduler:8786
        image: quanted/vb_dask:latest
        volumeMounts:
          - mountPath: /app/
            name: vb-dask-volume
      volumes:
        - name: vb-dask-volume
          hostPath:
            path: /Users/dsmith/Documents/git/vb_kube/vb_django
            type: Directory
