vb-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: vb-nginx
spec:
  selector:
    app: vb-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
    - protocol: TCP
      port: 443
      targetPort: 443

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vb-nginx
  name: vb-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vb-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vb-nginx
    spec:
      containers:
      - image: kurtw555/vb-nginx
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - mountPath: /etc/nginx/vb
          name: vb-nginx-certs
      restartPolicy: Always
      volumes:
      - name: vb-nginx-certs
        persistentVolumeClaim:
          claimName: vb-nginx-certs-pvolume-claim1
