vb-postgis.yml

apiVersion: v1
kind: Service
metadata:
  name: postgis
spec:
  selector:
    app: postgis
  ports:
  - protocol:
    port: 5432
    targetPort: 5432

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: postgis
  name: postgis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgis
  serviceName: postgis
  template:
    metadata:
      labels:
        app: postgis
    spec:
      containers:
      - image: kurtw555/postgis
        name: postgis
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /docker-entrypoint-initdb.d/
          name: postgis-pvolume
      terminationGracePeriodSeconds: 10
      volumes:
      - name: postgis-pvolume
        persistentVolumeClaim:
          claimName: postgis-pvolume-claim1
