vb-postgresql.yml

apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
  - protocol:
    port: 5432
    targetPort: 5432

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  template:
    metadata:
      labels:
        app: postgis
    spec:
      containers:
      - image: postgres
        hostname: postgres
        name: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-pvolume
      terminationGracePeriodSeconds: 10
      volumes:
      - name: postgres-pvolume
        persistentVolumeClaim:
          claimName: postgres-pvolume-claim1
